# attend-and-excite

./: .gitignore  INSTALL.md  pipeline_attend_and_excite.py  pyproject.toml  requirements.txt  requirements_sd3.txt  train_dreambooth_lora_sd3.py
notebooks/: compare_models.ipynb  generate_images.ipynb  train_sd35_lora.ipynb
